# Points-Testing

./: CMakeLists.txt  README.md  package.xml  points_rviz_test.py  points_test.py  requirements.txt
config/: rvizconfig.rviz
launch/: points.launch  points_rviz.launch  points_rviz_py.launch  points_terminal.launch  points_terminal_py.launch
points_data/: out_delta.txt  output.txt  output_delta.txt  raster_test.txt
scripts/: points_corrector.py  points_rviz_test.py  points_test.py
scripts/python/: points_corrector.py  points_rviz_test.py  points_test.py  rdp_algorithm.py
